# flecs-sdl-test

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  devenv.nix  main.c
include/: game_common.h  nuklear_sdl_renderer.h  sdl_components.h  sdl_systems.h
modules/simple_components/: CMakeLists.txt  main.c  simple_components.h
modules/simple_systems/: CMakeLists.txt  main.c  simple_systems.h
src/: main.c  sdl_components.c  sdl_systems.c
